src/test/deca/syntax/invalid/include-twoMainsBecauseInclude.synt
includeFile-withMain.decah:1: